[localserver] inbox direct access
