# app/src/main/java/me/capcom/smsgateway/modules/localserver/auth/AuthScopes.kt
@@ -5,6 +5,7 @@ enum class AuthScopes(val value: String) {
 
     MessagesSend("messages:send"),
     MessagesRead("messages:read"),
+    MessagesReadInbox("messages:read-inbox"),
     MessagesExport("messages:export"),
 
     DevicesList("devices:list"),
